[package]
name = "rust_quickstart"
version = "0.0.1"
edition = "2018"

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
anyhow = "1.0.39"
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
futures = "0.3.5"
async-std = "1.5.0"